[tool.poetry]
name = "todays_matches"
version = "0.1.0"
description = ""
authors = ["Leandro Araújo <leandrocaaraujo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyppeteer = "^0.2.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
